--- a/style.css
+++ b/style.css
@@ -5,17 +5,14 @@
 }
 .gallery{
     display: flex;
-    
     flex-direction: row;
     margin-top: 3px;
     margin-left: 3px;
 }
-
 .column1{
     width: 30%;
     display: flex;
     flex-direction: column;
-    
     margin-right: 3px;
 }
 .image{
@@ -48,7 +45,7 @@
     font-family:  'Raleway', sans-serif;
     letter-spacing: 1px;
 }
-.image:hover{
+.image_bw{
     filter: grayscale(1);
 }
 .image:hover img{
